style.css
/* ... */
/** MOBILE */
@media (max-width: 576px) {
    body {
        padding: 1rem;
    }

    .search-container {
        width: 100%;
        gap: 0.5rem;
    }

    .search-button.text {
        display: none;
    }

    .search-button.icon {
        display: block;
    }

    /* Modale */
    .modal-mobile {
        display: none;
        justify-content: center;
        align-items: center;
        position: fixed;
        top: 0;
        left: 0;
        width: 100vw;
        height: 100vh;
        padding: 1rem;
        background-color: rgba(0, 0, 0, 0.3);
        backdrop-filter: blur(3px);
        z-index: 1000;
        opacity: 0;
        pointer-events: none;
        transition: opacity 0.3s ease;
    }

    .modal-mobile.active {
        display: flex;
        opacity: 1;
        pointer-events: all;
    }

    .modal-content {
        position: relative;
        background-color: rgba(0, 0, 0, 0.9);
        backdrop-filter: blur(5px);
        border-radius: 8px;
        padding: 1rem;
        margin-top: 2rem;
        border: 2px solid var(--pink);
        animation: fadeIn 0.5s ease forwards;
    }

    .modal-mobile.closing .modal-content {
        animation: fadeOut 0.3s ease forwards;
    }

    .modal-header {
        display: flex;
        gap: 1rem;
        margin-bottom: 1rem;
    }

    .modal-poster {
        width: 120px;
        height: 180px;
        border-radius: 5px;
        object-fit: cover;
        border: 2px solid var(--white);
        animation: fadeInLeft 0.5s ease forwards;
        animation-delay: 0s;
        opacity: 0;
        z-index: 1;
    }

    .modal-header-info {
        flex: 1;
    }

    .modal-title {
        font-size: 1.3rem;
        margin-bottom: 0.5rem;
        color: var(--pink);
        animation: fadeInLeft 0.7s ease forwards;
        animation-delay: 0.2s;
        opacity: 0;
    }

    .modal-director,
    .modal-meta {
        font-size: 0.9rem;
        color: #cccccc;
        margin-bottom: 0.3rem;
    }

    .modal-director {
        animation: fadeInLeft 0.6s ease forwards;
        animation-delay: 0.5s;
        opacity: 0;
    }
    .modal-meta {
        animation: fadeInLeft 0.6s ease forwards;
        animation-delay: 0.7s;
        opacity: 0;
    }

    .modal-button-seen {
        display: flex;
        align-items: center;
        justify-content: center;
        width: 2rem;
        height: 2rem;
        margin-top: 1rem;
        border: none;
        border-radius: 50%;
        color: white;
        background: rgba(0, 0, 0, 0.7);
        cursor: pointer;
        z-index: 2;
        transition: all 0.2s ease;
        animation: fadeIn 0.6s ease forwards;
        animation-delay: 1.1s;
        opacity: 0;
    }

    .modal-button-seen:hover {
        background-color: #f45c8b80;
    }

    .modal-button-seen.seen {
        color: var(--white);
        background: var(--pink);
    }

    .modal-button-seen.seen i {
        font-size: 1rem;
    }

    .modal-body {
        margin-top: 1rem;
    }

    .modal-cast,
    .modal-plot {
        font-size: 0.9rem;
        margin-bottom: 1rem;
    }

    .modal-cast {
        animation: fadeInDown 0.7s ease forwards;
        animation-delay: 1.2s;
        opacity: 0;
    }

    .modal-plot {
        animation: fadeInDown 0.7s ease forwards;
        animation-delay: 1.5s;
        opacity: 0;
    }

    .modal-plot-text {
        overflow-y: auto;
        max-height: 150px;
        padding-right: 5px;
        line-height: 1.5;
    }

    .modal-director strong,
    .modal-cast strong,
    .modal-plot strong {
        color: var(--pink);
    }

    .modal-plot strong {
        display: block;
    }

    .modal-close {
        position: absolute;
        top: -0.3rem;
        right: -0.3rem;
        border: none;
        width: 2.5rem;
        height: 2.5rem;
        border-radius: 50%;
        font-size: 1.2rem;
        color: var(--pink);
        background-color: transparent;
        cursor: pointer;
        z-index: 1;
    }

    .modal-close:hover {
        color: var(--white);
    }

    @keyframes fadeIn {
        0% {
            opacity: 0;
            transform: scale(0.95);
        }
        100% {
            opacity: 1;
            transform: scale(1);
        }
    }

    @keyframes fadeOut {
        0% {
            opacity: 1;
            transform: scale(1);
        }
        100% {
            opacity: 0;
            transform: scale(0.95);
        }
    }

    @keyframes fadeInLeft {
        0% {
            opacity: 0;
            transform: translateX(-100px);
        }
        100% {
            opacity: 1;
            transform: translateY(0);
        }
    }

    @keyframes fadeInUp {
        0% {
            opacity: 0;
            transform: translateY(100px);
        }
        100% {
            opacity: 1;
            transform: translateY(0);
        }
    }

    @keyframes fadeInDown {
        0% {
            opacity: 0;
            transform: translateY(-30px);
        }
        100% {
            opacity: 1;
            transform: translateY(0);
        }
    }
}

